# cloud_models_classifier

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
setup/: __init__.py  clasificador.py  configuracion.py  demo.py  modelos.py  utilidades.py
tests/: __init__.py  casos_prueba.py  ejecutar_pruebas.py  utilidades_prueba.py
